--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <title>XXX's Blog</title>
+    <title>劉玟郁's Blog</title>
 </head>
 <body>
     <!-- 頁頭區 -->
     <header>
-        <h1>XXX 的個人部落格</h1>
+        <h1>劉玟郁 的個人部落格</h1>
         <nav>
             <a href="#section1">關於我</a>
             <a href="#section2">工作經歷</a>
