--- a/CSS_上課練習/solor_system.html
+++ b/CSS_上課練習/solor_system.html
@@ -4,7 +4,7 @@
                 <title>Solar System</title>
            </head>
            <body>
-                <h1 style="font-family: cursive">Solar System</h1>
+                <h1 style="font-family: cursive; font-size: 70px;">Solar System</h1>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Planets2013.svg" alt="Solar System image" height= "250px" width="700px">
                 <p>The solar system consists of the sun and everything that orbits the sun. This includes the eight planets and their moons, the dwarf planets, asteroids, comets and other small objects.
                 </p>
