--- a/css-responsive/R00_media-queries_example.html
+++ b/css-responsive/R00_media-queries_example.html
@@ -26,7 +26,7 @@
     @media (min-width: 601px) and (max-width: 900px) {
       body {
         font-size: 18px; /* 字體稍微縮小 */
-        background-color: lightyellow; /* 背景變黃 */
+        background-color: rgb(236, 236, 188); /* 背景變黃 */
       }
     }
   </style>
